--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                 </div>
                 <div class="admin-box">
                     <h3>٢. إدارة المنتجات</h3>
-                   <select id="selectDocTopicSec"></select>
+                   <select id="admProdCatSelect"></select>
                     <input type="text" id="admProdName" placeholder="اسم الموديل">
                     <input type="number" id="admProdPrice" placeholder="السعر">
                     <input type="file" id="admProdFile" accept="image/*" style="margin: 10px 0; width: 100%;">
