--- a/index.html
+++ b/index.html
@@ -573,7 +573,46 @@ async function publishProd() {
     } catch (error) {
         alert("فشل رفع صورة المنتج");
     }
-}  </script>
+} 
+   // ... نهاية الأكواد السابقة ...
+
+// الصق الدالة هنا (قبل وسم الإغلاق)
+async function publishPayment() {
+    const fileInput = document.getElementById('admPayFile');
+    const nameInput = document.getElementById('admPayName');
+    
+    if(!fileInput.files[0] || !nameInput.value) {
+        return alert("يرجى كتابة اسم الطريقة (مثلاً: زين كاش) واختيار صورة الباركود");
+    }
+
+    alert("جاري رفع صورة الباركود... يرجى الانتظار");
+
+    try {
+        const imageUrl = await uploadImg(fileInput.files[0]);
+        db.ref('payments').push({
+            name: nameInput.value,
+            qr: imageUrl
+        }).then(() => {
+            alert("تم حفظ طريقة الدفع بنجاح!");
+            location.reload();
+        });
+    } catch (error) {
+        console.error(error);
+        alert("حدث خطأ أثناء الرفع، تأكد من اتصال الإنترنت");
+    }
+}
+
+</script> ```
+
+---
+
+### 💡 لماذا نضعها هنا؟
+* **تطابق المعرفات (IDs):** الدالة تستخدم `document.getElementById('admPayFile')` للوصول إلى الملف المرفوع. بوضعك لـ `id="admPayFile"` في السطر ٣٠٥ الجديد، سيتعرف الكود فوراً على الصورة التي اخترتها من هاتفك.
+* **الترتيب البرمجي:** وضع الدوال في نهاية السكريبت يضمن أن جميع العناصر في الصفحة قد تم تحميلها أولاً، مما يمنع حدوث أخطاء "العنصر غير موجود" عند الضغط على الزر.
+
+
+**بمجرد لصق الدالة وتعديل السطر ٣٠٥، احفظ الملف وجرب رفع باركود "زين كاش"؛ ستجد أن الزر بدأ يعمل ويرفع الصور مباشرة إلى "شبابيك". هل نجحت العملية؟**
+    </script>
   
 </body>
 </html>
