--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@ firebase.initializeApp(firebaseConfig);
 const db = firebase.database();
 
 // --- إعدادات شبابيك الذكية (Cloudinary) ---
-const CLOUD_NAME = "shababek-curtain"; 
+const CLOUD_NAME = "dnkuwf8q9"; 
 const UPLOAD_PRESET = "afsx4w9k";      
 const LOGO_ID = "shababek_logo";       
 
