--- a/index.html
+++ b/index.html
@@ -511,10 +511,9 @@ function openCalc(p) {
     
     showPage('productCalculator'); 
 }
-}
 
 // --- نظام السلة والطلب ---
-function function addToCart() { 
+function addToCart() 
     const h = v('hIn'); 
     if(!h || h <= 0) return alert("أدخل الطول بالمتر أولاً"); 
     
