--- a/index.html
+++ b/index.html
@@ -13,6 +13,45 @@
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
 
     <style>
+        /* زر واتساب العائم */
+.floating-wa {
+    position: fixed;
+    bottom: 25px;
+    left: 25px; /* يمكنك تغييرها إلى right إذا أردت */
+    width: 65px;
+    height: 65px;
+    background: #25D366;
+    color: white;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 32px;
+    text-decoration: none;
+    z-index: 9999;
+    box-shadow: 0 8px 25px rgba(0,0,0,0.25);
+    
+    animation: waPulse 1.8s infinite;
+    transition: 0.3s;
+}
+
+.floating-wa:hover {
+    transform: scale(1.15);
+}
+
+/* تأثير النبض */
+@keyframes waPulse {
+    0% {
+        box-shadow: 0 0 0 0 rgba(37, 211, 102, 0.7);
+    }
+    70% {
+        box-shadow: 0 0 0 20px rgba(37, 211, 102, 0);
+    }
+    100% {
+        box-shadow: 0 0 0 0 rgba(37, 211, 102, 0);
+    }
+}
+
         :root { --gold: #d9b382; --brown: #3d2e24; --bg: #f9f6f2; --white: #ffffff; --whatsapp: #25D366; --red: #ff4d4d; }
         * { box-sizing: border-box; margin: 0; padding: 0; font-family: 'Cairo', sans-serif; -webkit-tap-highlight-color: transparent; }
         body { background: var(--white); color: var(--brown); overflow-x: hidden; scroll-behavior: smooth; line-height: 1.6; }
@@ -623,6 +662,13 @@ function handleSearch() {
     });
 }
 </script> ```
+<a href="https://wa.me/9647883002797" 
+   class="floating-wa" 
+   target="_blank"
+   title="تواصل معنا عبر واتساب">
+   
+   <i class="fab fa-whatsapp"></i>
+</a>
 
 </body>
 </html>
