--- a/index.html
+++ b/index.html
@@ -530,12 +530,21 @@ function addToCart() {
     confetti({particleCount:150, spread:70, origin:{y:0.6}}); 
     alert("تمت إضافة " + cur.name + " إلى السلة بنجاح!"); 
 }
-
 function toggleCartModal() { 
     const o = document.getElementById('cartOverlay'); 
     o.style.display = o.style.display === 'flex' ? 'none' : 'flex'; 
+    
     const list = document.getElementById('cartItemsList'); 
-    list.innerHTML = cart.map(i => `<div class="cart-item"><span>${i.n}</span><b>${i.p} د.ع</b></div>`).join(''); 
+    // التعديل هنا: أضفنا وسم img لعرض الصورة المخزنة i.img
+    list.innerHTML = cart.map(i => `
+        <div class="cart-item" style="display:flex; align-items:center; gap:12px; padding:10px 0; border-bottom:1px solid #eee;">
+            <img src="${i.img}" style="width:50px; height:50px; border-radius:8px; object-fit:cover; border:1px solid var(--gold);">
+            <div style="flex:1;">
+                <div style="font-weight:bold; color:var(--brown);">${i.n}</div>
+                <div style="font-size:0.9rem; color:var(--gold); font-weight:900;">${i.p} د.ع</div>
+            </div>
+        </div>
+    `).join(''); 
 }
 
 function sendOrder() {
